<resources>
    <string name="app_name">Schooler</string>
    <string name="facebook_app_id">1945952535635642</string>
    <string name="fb_login_protocol_scheme">fb1945952535635642</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="menu_search">search</string>
    <string name="menu_settings">menu</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="transport_coordination">Transport Coordinator</string>
    <string name="contact_message">Message</string>
    <string name="contact_call">Call</string>
    <string name="contact_phoneno">Phone No:</string>
    <string name="driver_text">Driver</string>
    <string name="title_track">Track</string>
    <string name="title_history">Trips</string>
    <string name="title_contact">Driver</string>
    <string name="title_user_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_details">view details</string>
    <string name="date_show_off">Date</string>

    <string-array name="parent_fragment_titles">
        <item>Real-Time tracking</item>
        <item>Trip History</item>
        <item>Contact Driver</item>
        <item>Profile</item>
    </string-array>

    <string-array name="driver_fragment_titles">
        <item>Current Trip</item>
        <item>Attendance</item>
        <item>Contact Parent</item>
        <item>Profile</item>
    </string-array>

    <string name="loading">Please Wait</string>
    <string name="logout_txt">Logout</string>

    <string name="user_name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="address_text">Address</string>
    <string name="disable_account_text">Disable Account</string>
    <string name="preferred_contact_text">Preferred Contact</string>
    <string name="mobile_phone_text">Mobile Phone</string>
    <string name="email_text">Email</string>

    <string name="phone_number_text">Phone Number</string>
    <string name="save_txt">Save</string>
    <string name="edit_text">Edit</string>
    <string name="prefUserUID">useruid</string>
    <string name="firebase_profile_node">Profile</string>
    <string name="firebase_parent_node">ParentUser</string>
    <string name="text_notification_label">Text Notification</string>
    <string name="email_notification_label">Email Notification</string>
    <string name="push_notification_label">Push Notificaiton</string>
    <string name="firebase_settings_node">AppSettings</string>

    <string name="arrival_value_str">Time to Arrival</string>
    <string name="distance_str_value">Distance to travel</string>
    <string name="enable_account_text">Enable Account</string>
    <string name="student_id_label">Student ID</string>
    <string name="school_name_label">School Name</string>
    <string name="student_address_label">School Address</string>
    <string name="cancel_text">Cancel</string>
    <string name="camera_txt">Camera</string>
    <string name="gallery_txt">Gallery</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="confirm_txt">Confirm</string>
    <string name="user_full_name">Full name</string>
    <string name="user_email">Your email address</string>
    <string name="user_password">Your password</string>
    <string name="plus_one">+1</string>
    <string name="user_phone_number">Phone # (opional)</string>
    <string name="done_button">Done</string>
    <string name="back_button">Back</string>
    <string name="school_text">School:</string>
    <string name="route_text">Route</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="sign_up_complete">Account created, Please sign in.</string>
    <string name="dismiss">DISMISS</string>
    <string name="sign_up_incomplete">Something wrong. Please try again.</string>
    <string name="create_account_msg">Creating Accout, Please wait...</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_name_logo">Schooler</string>
    <string name="school_transition">School_transition</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="sign_up_btn">Sign Up with Email</string>
    <string name="login_btn_txt">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here"><u>Click Here!</u></string>
    <string name="tag_line">Getting kids to bus on time</string>
    <string name="signin_please_wait">Signing you in. Please wait...</string>
    <string name="please_try_again_msg">Something went wrong please try again</string>
    <string name="ntw_issue_msg">Not connected to internet. Please connect to network</string>
    <string name="log_in_fail_msg">Please check username and password.</string>
    <string name="log_out_successful">Logout successful</string>
    <string name="reset_password">Reset password</string>
    <string name="send_email">Send email</string>
    <string name="route_ask_school">Please ask school to assign route number.</string>
    <string name="select_child">Please select a Child for displaying contact information</string>
    <string name="title_activity_driver_bottom_navigation">DriverBottomNavigationActivity</string>
    <string name="title_trip_list">Trip</string>
    <string name="title_child_attendance">Attendance</string>
    <string name="title_parent_contact">Contact</string>
    <string name="current_trip_text">Current Trip</string>
    <string name="student_name">Student name</string>
    <string name="address_string">Destination Address</string>
    <string name="upcoming_trip_text">Upcoming trip</string>
    <string name="start_navigation">Start</string>
    <string name="firebase_driver_node">Driver</string>

</resources>
