<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_real_time_track_parent"
        android:icon="@drawable/ic_map_black_24px"
        android:title="@string/title_track"/>

    <item
        android:id="@+id/navigation_trip_history_parent"
        android:icon="@drawable/ic_history_black_24px"
        android:title="@string/title_history"/>

    <item
        android:id="@+id/navigation_contact_driver_parent"
        android:icon="@drawable/ic_contacts_black_24px"
        android:title="@string/title_contact"/>

    <item
        android:id="@+id/navigation_user_profile_parent"
        android:icon="@drawable/ic_account_circle_black_24px"
        android:title="@string/title_user_profile"/>

</menu>
