<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".parentuser.fragments.childfragments.AccountSettingsFragment">

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_account_text"
        android:id="@+id/disable_account_btn"/>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_account_text"
        android:id="@+id/enable_account_btn"
        android:visibility="gone"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferred_contact_text"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <RadioButton android:id="@+id/radio_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_phone_text"/>
        <RadioButton android:id="@+id/radio_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"/>
    </RadioGroup>

</LinearLayout>
