<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context=".parentuser.fragments.childfragments.ProfileInfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_text"
                android:inputType="phone"
                android:id="@+id/profile_phone_number"
                android:textColor="@drawable/edittext_enable_disable"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:id="@+id/profile_name"
                android:textColor="@drawable/edittext_enable_disable"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:id="@+id/profile_email"
                android:textColor="@drawable/edittext_enable_disable"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_text"
                android:inputType="textPostalAddress"
                android:id="@+id/profile_address"
                android:textColor="@drawable/edittext_enable_disable"/>
        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_txt"
            android:id="@+id/save_btn"
            android:drawableLeft="@drawable/ic_save_black_24px"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="@dimen/regular_text_size"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text"
            android:id="@+id/edit_btn"
            android:drawableLeft="@drawable/ic_border_color_black_24px"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="@dimen/regular_text_size"/>

    </LinearLayout>

    </LinearLayout>


</ScrollView>
