<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="com.sjsu.edu.schoolbustracker.parentuser.fragments.dialogfragments.PhotoPickerFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:id="@+id/photo_selection_view">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera_txt"
            android:id="@+id/button_camera"
            android:drawableLeft="@drawable/ic_camera_black_24dp"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery_txt"
            android:id="@+id/button_gallery"
            android:drawableLeft="@drawable/ic_photo_library_black_24dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/photo_conf_view">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_person_black_24dp"
            android:layout_gravity="center"
            android:id="@+id/photo_confirm_iv"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:borderlessButtonStyle"
                android:text="@string/cancel_text"
                android:id="@+id/cancel_photo"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:borderlessButtonStyle"
                android:text="@string/confirm_txt"
                android:id="@+id/confirm_photo"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
