<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"

    tools:context=".parentuser.fragments.childfragments.NotificationSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_notification_label"
                android:layout_weight="1"
                android:textSize="@dimen/regular_text_size"
                android:paddingTop="@dimen/label_top_padding"
                android:paddingBottom="@dimen/label_bottom_padding"/>
            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/text_notification_switch"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_notification_label"
                android:layout_weight="1"
                android:textSize="@dimen/regular_text_size"
                android:paddingTop="@dimen/label_top_padding"
                android:paddingBottom="@dimen/label_bottom_padding"/>
            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/email_notification_switch"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_notification_label"
                android:layout_weight="1"
                android:textSize="@dimen/regular_text_size"
                android:paddingTop="@dimen/label_top_padding"
                android:paddingBottom="@dimen/label_bottom_padding"/>
            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/push_notification_switch"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_txt"
                android:drawableLeft="@drawable/ic_save_black_24px"
                android:id="@+id/save_settings_button"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
