<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/user_registration_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/reg_user_name_et"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/user_full_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="42dp"
        tools:layout_conversion_absoluteWidth="368dp"
        tools:layout_conversion_absoluteX="8dp"
        tools:layout_conversion_absoluteY="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/reg_user_email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/user_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_user_name_et"
        tools:layout_conversion_absoluteHeight="193dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:layout_conversion_absoluteX="8dp"
        tools:layout_conversion_absoluteY="50dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/user_profile_image_view"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/reg_user_pass_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/user_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_user_email_et"
        tools:layout_conversion_absoluteHeight="259dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:layout_conversion_absoluteX="8dp"
        tools:layout_conversion_absoluteY="243dp"
        app:layout_constraintLeft_toRightOf="@+id/user_profile_image_view"
        app:layout_constraintHorizontal_bias="0.0"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/reg_user_phone_no_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/user_phone_number"
        android:inputType="phone"
        tools:layout_conversion_absoluteHeight="259dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:layout_conversion_absoluteX="8dp"
        tools:layout_conversion_absoluteY="243dp"
        android:enabled="true"
        app:layout_constraintLeft_toRightOf="@+id/user_country_code_tv"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_user_pass_et"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/user_country_code_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:hint="@string/plus_one"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_conversion_absoluteHeight="259dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:layout_conversion_absoluteX="8dp"
        tools:layout_conversion_absoluteY="243dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/reg_user_phone_no_et"/>

    <ImageView
        android:id="@+id/user_profile_image_view"
        android:layout_width="122dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_user_name_et"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp"/>

    <ImageView
        android:id="@+id/camera_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/user_profile_image_view"
        app:layout_constraintRight_toRightOf="@+id/user_profile_image_view"
        app:srcCompat="@android:drawable/ic_menu_camera"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_image_view"
        app:layout_constraintVertical_bias="0.504">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:elevation="4dp"
            android:text="@string/back_button"
            android:theme="@style/ButtonTheme"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/done_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:elevation="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/done_button"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:elevation="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/common_signin_button_text"
            android:visibility="gone"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
